fix extra space issue in examples of work and styling

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 			-ms-animation: none !important;
 			animation: none !important;
 		}
-
+ 
 	h1,h2,h3,h4,h5,h6
 	{
 		font-weight: 700;
@@ -329,7 +329,7 @@
 				
 			.image.featured
 			{
-				display: inline-block;
+				display: block;
 				width: 100%;
                 height: 75%;
 				margin: 0 0 2em 0;
